<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">法利莱</string>

    <string name="welcome">Welcome to\nFarley</string>
    <string name="demo_loadmore">-loading-</string>
    <string name="nomoredata">no data any more</string>
    <string name="dev_list">设备列表</string>
    <string name="detail_info">详细信息</string>
    <string name="dev_info">设备</string>
    <string name="real_time_monitor">实时</string>
    <string name="warning_info">报警</string>
    <string name="sraft_database">数据库</string>
    <string name="overview">概览</string>
    <string name="control">控制</string>

    <string name="back_prompt">再按一次返回键退出程序</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remote_type">远程模式</string>
    <string name="lan_type">局域网模式</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">账号不合法</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">账号不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing account
        completions."
    </string>

    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="net_error">网络异常，请检查网络</string>
    <string name="offline_prompt">设备已离线</string>
    <string name="server_exception">服务器异常</string>
    <string name="unknown_error">未知错误</string>
    <string name="lan_none_dev">局域网内暂无设备</string>
    <string name="back_again">连续点击返回退出</string>

    <string name="pri_less">权限不足</string>

    <string name="monitor">监控</string>
    <string name="quit">退出</string>
    <string name="upload">上传</string>
    <string name="confirm">确定</string>
    <string name="tips">请确认.nc文件已放入手机路径\"<xliff:g id="path">%1$s</xliff:g>\"文件夹下</string>
    <string name="upload_empty">无可识别上传文件</string>

    <string name="no_warning">无告警信息！</string>

    <string name="x_real_pos">X轴实际位置</string>
    <string name="y_real_pos">Y轴实际位置</string>
    <string name="z_real_pos">Z轴实际位置</string>
    <string name="run_status_overview">运行状态</string>
    <string name="laser_power_overview">激光功率</string>
    <string name="feed_velocity">进给速率</string>
    <string name="running_status">运行</string>
    <string name="ready_status">准备</string>
    <string name="warning_status">报警</string>
    <string name="pause_status">暂停</string>
    <string name="reset_status">复位</string>
    <string name="ref_status">Ref</string>
    <string name="auto_status">Auto</string>
    <string name="mdi_status">MDI</string>
    <string name="manual_status">Man</string>
    <string name="virture_status">虚拟运行</string>
    <string name="single_status">单步</string>
    <string name="backward_status">回溯</string>

    <string name="x_info">X轴信息</string>
    <string name="real_pos">实际位置:</string>
    <string name="set_pos">设定位置:</string>
    <string name="set_velo">设定速度:</string>
    <string name="pos_diff">跟随误差:</string>
    <string name="y_info">Y轴信息</string>
    <string name="z_info">Z轴信息</string>
    <string name="jerk_value">随动Jerk值:</string>
    <string name="rsp_slow">随动低响应值:</string>
    <string name="reach_window">随动到位窗口:</string>
    <string name="acc_limit">随动加速度限制值:</string>
    <string name="real_height">随动实际高度:</string>
    <string name="normal_rsp">随动正常响应值:</string>
    <string name="set_height">随动设定高度:</string>
    <string name="max_velo">随动速度:</string>
    <string name="other">其它</string>
    <string name="cut_time">当日切割时间:</string>
    <string name="cut_distance">当日切割距离:</string>
    <string name="line_time">当日划线时间:</string>
    <string name="line_distance">当日划线距离:</string>
    <string name="null_time">当日空走时间:</string>
    <string name="null_distance">当日空走距离:</string>
    <string name="all_cut_time">累计切割时间:</string>
    <string name="all_cut_distance">累计切割距离:</string>
    <string name="all_line_time">累计划线时间:</string>
    <string name="all_line_distance">累计画线距离:</string>
    <string name="all_null_time">累计空走时间:</string>
    <string name="all_null_distance">累计空走距离:</string>
    <string name="machine_status">机床状态</string>
    <string name="machine_status0">机床状态:</string>
    <string name="machine_mode">机床模式</string>
    <string name="single_step">单步:</string>
    <string name="backward">回溯:</string>
    <string name="virture_run">虚拟运行:</string>
    <string name="reset">复位:</string>
    <string name="ready">准备:</string>
    <string name="pause">暂停:</string>
    <string name="warning">报警:</string>
    <string name="run">运行:</string>
    <string name="gas_pressure">气体气压:</string>
    <string name="gas_type">气体类型:</string>
    <string name="laser_power">激光功率:</string>
    <string name="laser_duty">激光占空比:</string>
    <string name="laser_freq">激光频率:</string>
    <string name="run_status">运行状态:</string>
    <string name="auto">Auto:</string>
    <string name="mdi">MDI:</string>
    <string name="manual">Manual:</string>
    <string name="ref">Ref:</string>

    <string name="null_content">无</string>

    <string name="refresh">刷新</string>

    <string name="quality_hd">高清</string>
    <string name="quality_balanced">均衡</string>
    <string name="quality_flunet">流畅</string>
    <string name="cloud">云台</string>
    <string name="talk">对讲</string>
    <string name="close_camera_lens">镜头遮蔽</string>
    <string name="open_camera_lens">镜头开启</string>
    <string name="camera_lens_closed">镜头遮蔽中</string>
    <string name="camera_lens_closing">正在遮蔽镜头...</string>
    <string name="camera_lens_opening">正在取消遮蔽...</string>
    <string name="close_source_localization">听声辨位关闭</string>
    <string name="open_source_localization">听声辨位开启</string>
    <string name="loading_text_default">加载中，请稍候</string>
    <string name="realplay_no_encrypt_password_error">视频已加密，播放失败</string>
    <string name="capture">截图</string>
    <string name="record">录像</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="talking">对讲中…</string>
    <string name="press_to_talk_release_to_listen">按住说话\n松开收听</string>
    <string name="loading">加载中…</string>
    <string name="device_password_is_null">设备密码不能为空</string>
    <string name="device_defence_open_success">活动检测开启成功</string>
    <string name="realplay_close_sound_localization_fail">关闭听声辨位失败</string>
    <string name="realplay_open_sound_localization_fail">开启听声辨位失败</string>
    <string name="source_detection_off">OFF</string>
    <string name="source_detection_on">ON</string>
    <string name="device_defence_open_fail">活动检测开启失败</string>
    <string name="device_defence_close_success">活动检测关闭成功</string>
    <string name="device_defence_close_fail">活动检测失关闭</string>
    <string name="realplay_full_talk_start_tip">你可以开始说话了</string>
    <string name="camera_lens_too_busy">镜头转动中，请稍候</string>
    <string name="ptz_is_preseting">镜头转动中，请稍候</string>
    <string name="ptz_control_timeout_sound_lacalization_failed">听声辨位已开启，操作失败</string>
    <string name="ptz_control_timeout_cruise_track_failed">轨迹巡航中，请稍候</string>
    <string name="ptz_preset_invalid_position_failed">当前位置已被删除，请返回刷新</string>
    <string name="ptz_preset_current_position_failed">当前就在这个位置哦</string>
    <string name="ptz_preset_sound_localization_failed">听声辨位中，请稍候</string>
    <string name="ptz_operation_failed">操作失败</string>
    <string name="ptz_operation_too_frequently">操作太频繁啦，先歇歇吧</string>
    <string name="ptz_preset_exceed_maxnum_failed">已经不能收藏更多了</string>
    <string name="ptz_privacying_failed">镜头已遮蔽，无法操作云台</string>
    <string name="ptz_mirroring_failed">语音对讲中，无法操作云台</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="realplay_set_fail_status">视频播放失败，设备已开启隐私保护</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_loading">正在加载，请稍候...</string>
    <string name="realplay_login_password_error">登录设备失败</string>
    <string name="realplay_login_password_msg">初始密码为设备验证码，若设备已注册平台，请输入用户ID</string>
    <string name="realplay_play_no_video_source">没有视频源</string>
    <string name="start_voice_talk">正在发起对讲</string>
    <string name="setting_video_level">正在设置画面质量…</string>
    <!-- 历史录像回放界面 -->
    <string name="camera_not_online">设备不在线</string>
    <string name="remoteplayback_fail">视频播放失败</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="remoteplayback_connect_server_error">连接服务器失败，请重试</string>
    <string name="remoteplayback_connect_device_error">播放中断，请重试</string>
    <string name="remoteplayback_searchfile_fail_for_network">查询录像失败,请检查您的网络</string>
    <string name="remoteplayback_searchfile_fail_for_device">查询录像失败</string>
    <string name="remoteplayback_norecordfile">没有查询到录像</string>
    <string name="remoteplayback_norecordfile_alarm">没有查询到该时刻的报警录像</string>
    <string name="remoteplayback_capture_fail">抓图失败</string>
    <string name="remoteplayback_capture_fail_for_memory">抓图失败,存储空间已满</string>
    <string name="remoteplayback_record_fail">录像失败</string>
    <string name="remoteplayback_record_fail_for_memory">录像中断,存储空间已满</string>
    <string name="remoteplayback_SDCard_disable_use">存储卡不可用</string>
    <string name="already_saved_to_volume">已保存至相册</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="realplay_play_talkback_network_exception">网络异常，对讲已关闭</string>
    <string name="realplay_play_talkback_request_timeout">请求超时，对讲已关闭</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_password_error_title">请输入设备密码</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_password_error_message4">视频已加密，请联系分享者获取密码进行查看（密码区分大小写）</string>
    <string name="realplay_play_fail">视频播放失败</string>
</resources>
