<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adrian.farley.fragment.RealTimeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_info"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_real_pos_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/real_pos"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_set_pos_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/set_pos"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_set_velo_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/set_velo"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_pos_diff_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/pos_diff"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_info"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_real_pos_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/real_pos"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_set_pos_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/set_pos"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_set_velo_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/set_velo"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_pos_diff_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/pos_diff"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_info"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_jerk_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/jerk_value"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_rsp_slow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/rsp_slow"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_reach_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/reach_window"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_acc_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/acc_limit"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_real_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/real_height"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_normal_rsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/normal_rsp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_set_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/set_height"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_max_velo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/max_velo"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_cut_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/cut_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_cut_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/cut_distance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_line_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/line_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_line_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/line_distance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_null_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/null_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_null_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/null_distance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_all_cut_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/all_cut_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_all_cut_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/all_cut_distance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_all_line_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/all_line_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_all_line_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/all_line_distance"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_all_null_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/all_null_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_all_null_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/all_null_distance"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_status"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/machine_mode"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_single_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/single_step"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_backward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/backward"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_virture_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/virture_run"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_machine_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/machine_status0"
                android:textSize="18sp" />

            <!--<TextView
                android:id="@+id/tv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/ready"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/pause"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/run"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tv_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/warning"
                android:textSize="18sp" />-->

            <TextView
                android:id="@+id/tv_gas_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/gas_pressure"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_gas_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/gas_type"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_laser_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/laser_power"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_laser_duty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/laser_duty"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_laser_freq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/laser_freq"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left"
                android:text="@string/run_status"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/auto"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_mdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/mdi"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/manual"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/realtime_item_margin_left2"
                android:text="@string/ref"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
