<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adrian.farley.activity.ControlActivity">
    <include
        android:id="@+id/title_layout"
        layout="@layout/layout_title" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/tv_cut_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_normal"
            android:text="切割文件名"/>
        <TextView
            android:id="@+id/tv_param_db"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:textSize="@dimen/font_normal"
            android:text="参数数据库名"/>
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/machine_status"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:text="@string/running_status"
            android:textSize="@dimen/font_normal"/>
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:text="@string/reset_status"
            android:textSize="@dimen/font_normal"/>
        <Button
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:text="@string/pause_status"
            android:textSize="@dimen/font_normal"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/run_status_overview"/>
    <LinearLayout
        android:id="@+id/rg_run_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_ref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:textAllCaps="false"
            android:text="@string/ref_status"
            android:textSize="@dimen/font_normal"/>
        <Button
            android:id="@+id/btn_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:textAllCaps="false"
            android:text="@string/auto_status"
            android:textSize="@dimen/font_normal"/>
        <Button
            android:id="@+id/btn_mdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:textAllCaps="false"
            android:text="@string/mdi_status"
            android:textSize="@dimen/font_normal"/>
        <Button
            android:id="@+id/btn_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:textAllCaps="false"
            android:text="@string/manual_status"
            android:textSize="@dimen/font_normal"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/machine_mode"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_virture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:textSize="@dimen/font_normal"
            android:text="@string/virture_status"/>
        <Button
            android:id="@+id/btn_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:textSize="@dimen/font_normal"
            android:text="@string/single_status"/>
        <Button
            android:id="@+id/btn_backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/status_light_selector"
            android:textSize="@dimen/font_normal"
            android:text="@string/backward_status"/>

    </LinearLayout>

</LinearLayout>
